# mcp-cpp-sdk

./: .gitignore  CMakeLists.txt  README.md
3thirdparty/libevent-2.1.12-stable/: config.h  config.status  libevent_openssl.pc  libtool
3thirdparty/libevent-2.1.12-stable/_libs/: libevent.lai  libevent_core.lai  libevent_extra.lai  libevent_openssl.lai  libevent_pthreads.lai
3thirdparty/libevent-2.1.12-stable/sample/: dns-example  event-read-fifo  hello-world  http-connect  http-server  https-client  le-proxy  signal-test  time-test
3thirdparty/libevent-2.1.12-stable/sample/_libs/: dns-example  event-read-fifo  hello-world  http-connect  http-server  https-client  le-proxy  signal-test  time-test
3thirdparty/libevent-2.1.12-stable/test/: bench  bench_cascade  bench_http  bench_httpclient  regress  rpcgen-attempted  test-changelist  test-closed  test-dumpevents  test-eof  test-fdleak  test-init  test-ratelim  test-time  test-weof
3thirdparty/libevent-2.1.12-stable/test/_libs/: bench  bench_cascade  bench_http  bench_httpclient  regress  test-changelist  test-closed  test-dumpevents  test-eof  test-fdleak  test-init  test-ratelim  test-time  test-weof
a_cursor_config/: launch.json  settings.json1  tasks.json
agent/examples/: README.md  README_IPC_DEMO.md  __agent_https_demo.cpp  agent_https_demo.cpp  agent_ipc_demo.cpp  agent_test.cpp  simple_agent_example.cpp
auth/: CMakeLists.txt
auth/examples/: auth_manager_example.cpp
auth/include/: auth_manager.h
auth/src/: auth_manager.cpp
auth/test/: auth_manager_gtest.cpp
client/: CMakeLists.txt  mcp_client.cpp  mcp_client.h  mcp_client_http_demo.cpp  mcp_client_https_demo.cpp  mcp_client_ipc_demo.cpp  reademe.txt
client/examples/: mcp_client_http_demo.cpp  mcp_client_https_demo.cpp  mcp_client_ipc_demo.cpp  mcp_client_ipc_parent_child.cpp
client/include/: mcp_client.h
client/src/: mcp_client.cpp
client/test/: mcp_client_gtest.cpp
client_py/: README.md  mcp_filesystem_client.py  mcp_filesystem_client_https.py
common/: httplib.h
debian/: changelog  control  copyright  libmcp-sdk-dev.install  mcp-sdk-tools.install  mcp-sdk.pc  rules
ipc/: CMakeLists.txt
ipc/doc/: LOGGING_FEATURES.md  MCP_SERVER_SETUP.md  PIPE_COMMUNICATION_README.md
ipc/examples/: ipc_client_example.cpp  ipc_dual_mode_example.cpp  ipc_server_example.cpp  pipe_communication_example.cpp
ipc/include/: mcp_protocol_messages.h  pipe_communication.h
ipc/src/: pipe_communication.cpp
ipc/test/: pipe_communication_gtest.cpp  pipe_communication_test.cpp
log/: CMakeLists.txt  README.md  logger.cpp  logger.h  logger_example.cpp
log/examples/: logger_example.cpp
log/include/: logger.h
log/src/: logger.cpp
log/test/: logger_gtest.cpp
mcp_protocol/: CMakeLists.txt  mcp_message.h  mcp_protocol_core.cpp  mcp_protocol_core.h
mcp_protocol/examples/: protocol_example.cpp
mcp_protocol/include/: mcp_message.h  mcp_protocol_core.h  mcp_protocol_messages.h
mcp_protocol/src/: mcp_protocol_core.cpp
mcp_protocol/test/: mcp_protocol_gtest.cpp
name_ipc/: CMakeLists.txt  README.md
name_ipc/examples/: named_pipe_client_example.cpp  named_pipe_client_test.cpp  named_pipe_server_example.cpp  named_pipe_server_test.cpp
name_ipc/include/: named_pipe.h
name_ipc/src/: named_pipe.cpp
name_ipc/test/: named_pipe_test.cpp
net/: CMakeLists.txt  README.md  localhost_mcp_demo.cpp  netio.cpp  netio.h  netio_mcp_demo.cpp
net/examples/: netio_http_client_demo.cpp  netio_http_demo_client_to_3d.cpp  netio_http_server_demo.cpp  netio_https_client_demo.cpp  netio_https_demo_client_to_3d.cpp  netio_https_server_demo.cpp
net/examples/doc/: QUICKSTART_HTTPS.md
net/include/: netio.h
net/src/: netio.cpp
net/test/: netio_gtest.cpp
net_tcp/: CMakeLists.txt
net_tcp/examples/: tcp_client_example.cpp  tcp_server_example.cpp  udp_client_example.cpp  udp_server_example.cpp
net_tcp/include/: tcp_socket.h  udp_socket.h
net_tcp/src/: tcp_socket.cpp  udp_socket.cpp
net_tcp/test/: net_tcp_gtest.cpp
packaging/: PACKAGING_SUMMARY.md  README.md  build_deb.sh  build_libs.sh  mcp_sdk.h  test_libs.cpp  test_libs.sh
packaging/debian/DEBIAN/: changelog  control  copyright  install  postinst  postrm  prerm  rules
server/: CMakeLists.txt  README.md  mcp_protocol.h  mcp_server.cpp  mcp_server.h
server/examples/: Readme.md  generate_certs.sh  mcp_filesystem_client_http_example.cpp  mcp_filesystem_client_https_example.cpp  mcp_filesystem_server_http_example.cpp  mcp_filesystem_server_https_example.cpp  mcp_filesystem_server_ipc_example.cpp
server/include/: mcp_filesystem_server.h  mcp_protocol.h  mcp_server.h
server/src/: mcp_filesystem_server.cpp  mcp_server.cpp
server/test/: mcp_server_gtest.cpp
session/: CMakeLists.txt
session/examples/: session_manager_example.cpp
session/test/: session_manager_gtest.cpp
tools/: code_stats.json  code_stats.py  code_stats.sh  code_stats.txt  final_stats.sh
transport/: CMakeLists.txt  ipc_example.cpp  replace_cout.py  sse_http_example.cpp  sse_https_example.cpp  test_log_integration.cpp  transport.cpp  transport.h  transport_example.cpp
transport/doc/: IMPLEMENTATION_SUMMARY.md  LOCAL_EXAMPLE_README.md  LOG_INTEGRATION_SUMMARY.md  README.md
transport/examples/: README_HTTP.md  README_HTTPS.md  README_STDIO.md  Readme.md  http_client_example.cpp  http_example_to_3d.cpp  http_server_example.cpp  https_client_example.cpp  https_example_to_3d.cpp  https_server_example.cpp  stdio_client_example.cpp  stdio_server_example.cpp
transport/include/: http_transport.h  https_transport.h  stdio_transport.h  transport_base.h  transport_factory.h
transport/src/: http_transport.cpp  https_transport.cpp  stdio_transport.cpp  transport_base.cpp  transport_factory.cpp
transport/test/: http_transport_gtest.cpp  https_transport_gtest.cpp  stdio_transport_gtest.cpp
